--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,14 +2,16 @@
 <html>
   <head>
     <title>Fwitter</title>
+
   </head>
   <body>
-
-    <div class="container">
-      <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
-    </div>
-
+    <% if flash[:success] %>
+      <p style="color:green"><%= flash[:success] %></p>
+    <% elsif flash[:error] %>
+      <% flash[:error].each do |message| %>
+        <p style="color:red"><%= message %></p>
+      <% end %>
+    <% end %>
+   <%= yield %>
   </body>
 </html>
