--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,16 +1,7 @@
-<% if Helpers.is_logged_in?(session) %>
-<%= @error %>
-  <form action='/tweets' method="post">
-    Content:
-    <input type="text" name="content"><br>
-    Create Your Tweet:
+<h1>New Tweet</h1>
 
-    <input type="submit" name="submit" id="submit">
-
-    <input type="submit" name="submit">
-
-  </form>
-
-  <% else %>
-      <h1> You Must Be Logged in to Make Tweets </h1>
-  <% end %>
+<form action='/tweets' method="post">
+  <label for="content">Content:</label>
+  <input type="text" name="content" id="content">
+  <input type="submit"  value="Submit">
+</form>
